2009-10-08  Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-30-03
	* datamodel & gui extended by Vasu to allow for the addition and
	removal of untracked parameters at the top-level of (module,
	service, etc.) instances

2009-09-23  Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-30-02
	* branch: B00-30-X
	* diff: change symbol for vector type parameter values which
	didn't change from '>' to '=' (requested by Martin)

2009-09-23  Philipp Schieferdecker <philipp.schieferdecker@cern.ch>

	* tag V00-30-00
	* gui: display python snippets for paths and sequences
	* gui: disable 'F2' key to edit (configuration) tree nodes
	* diff: add trackiness information to output
	* diff: improve representation of vector parameter types in diff
	output

2009-08-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-29-00
	* fixes by Ulf to the conversion of empty global psets
	* fixes by Jonathan to the parser (new problems file, updates to
	scripts extracting hlt cfi files, etc.)
	* first release of new message logger dialog by Vasu
	* improvements to the subtable creation tool
	(test/runCreateConfig)

2009-07-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-28-03
	* improvement to db interaction stabilization by Ulf, to be
	deployed with next version of RCMS.
	
2009-06-23  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-28-02
	* add test/runConfDBAdmin
	* completed & tested implementation of removal of releases and
	associated configurations
	* changed db schema: *Templates tables have their FK constraints
	to SuperIds altered to contain 'cascade on delete'

2009-06-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-28-01
	* gui: order instances in copy/reference context menus
	alphapbetically
	* gui: allow to search for values in the Search&Replace dialog,
	via the syntax: 'name (type) = value'. Each information is
	optional!
